# django-exercise

./: README.md  pyproject.toml
config/: settings.py
houses/: models.py
memo/: memo-django.txt
toLearn/: toLearn2.1.py  toLearn2.1.ts  toLearn2.2.py  toLearn2.3.py  toLearn2.4.py  toLearn2.5.py  toLearn3.0.py  toLearn3.1-3.2.py  toLearn3.1.py  toLearn3.2.py  toLearn3.3.py  toLearn3.4.py  toLearn3.5.py  toLearn4.0.py  toLearn4.1.py  toLearn4.2.py  toLearn4.3.py  toLearn4.4.py
toLearn/oop/: functional.js  index.js  oop.js  oop.py
