[tool.poetry]
name = "airbnb-clone-exercise"
version = "0.1.0"
description = ""
authors = ["manjuSnack <dlekddl43@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_exercise"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
